# mlops-creditcard

./: .gitignore
.github/workflows/: deployment-image-CI.yml  prefect-image-CI.yml
creditcard/: pyproject.toml
creditcard/src/creditcard/models/: creditcard_model.py
deployment/: CreditcardSeldonWrapper.py  Dockerfile  requirements.txt
prediction/: requirements.txt  test_model.py
training/: Dockerfile  creditcard_mlflow_wrapper.py  pipeline_retrain.py  prefect_agent_deployment.yaml  prefect_k8s_deployment.py  requirements.txt  training_pipeline_basemodel.py  upload_base_model.py
training/files/: deploy_creditcard.yaml
