[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "creditcard"
version = "1.0.0"
authors = [
  { name="Antonio M. Burgueño", email="ambrbr@uma.es" },
]
description = "Fraud detection models, including drift detection"
readme = "README.md"
requires-python = "==3.11"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "alibi-detect" = "==0.11.4",
]

[project.urls]
"Homepage" = "https://github.com/KhaosResearch/mlops-creditcard"
"Bug Tracker" = "https://github.com/KhaosResearch/mlops-creditcard/issues"